# VirtualFileSystem

./: .gitignore  CMakeLists.txt  ReadMe.md  VirtualFileSystem.sln
VirtualFileSystem/: VirtualFileSystem.vcxproj  VirtualFileSystem.vcxproj.filters  main.cpp  md5.h
VirtualFileSystem/test-data/: check.txt
VirtualFileSystem/test-data/dlc1/: file.txt
VirtualFileSystem/test-data/dlc2/: check_png.py  file.txt  file2.txt
VirtualFileSystem/vfs/: Common.h  FileStream.h  FileSystem.h  Utils.cpp  Utils.h  Utils.inl  VirtualFileSystem.cpp  VirtualFileSystem.h
VirtualFileSystem/vfs/memory/: MemoryData.cpp  MemoryData.h  MemoryFileStream.cpp  MemoryFileStream.h  MemoryFileSystem.cpp  MemoryFileSystem.h
VirtualFileSystem/vfs/native/: NativeFileStream.cpp  NativeFileStream.h  NativeFileSystem.cpp  NativeFileSystem.h
VirtualFileSystem/vfs/pack/: PackFileStream.cpp  PackFileStream.h  PackFileSystem.cpp  PackFileSystem.h
examples/: CMakeLists.txt
examples/test/: main.cpp
examples/test/test-data/: test.pak
examples/test/test-data/dlc1/: file1.txt
examples/test/test-data/dlc1/mem/: aaaaaaaaaaaaaaaa.txt
examples/test/test-data/dlc2/: file.txt
examples/test/test-data/dlc2/files/: out.data
examples/test_gui/: main.cpp
src/vfs/: FileStream.h  FileSystem.h  Utils.cpp  Utils.inl  VirtualFileSystem.cpp  VirtualFileSystem.h
src/vfs/memory/: MemoryData.cpp  MemoryFileStream.cpp  MemoryFileStream.h  MemoryFileSystem.cpp  MemoryFileSystem.h
src/vfs/native/: NativeFileStream.cpp  NativeFileStream.h  NativeFileSystem.cpp  NativeFileSystem.h
src/vfs/pack/: PackFileStream.cpp  PackFileStream.h  PackFileSystem.cpp  PackFileSystem.h  PackUtils.cpp  PackUtils.h
